--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <h2>Sección de imagenes</h2>
     <img src="image1.webp" alt="luffy One Piece">
 </main>
+<script src="script.js"></script>
 <footer>
 	<hr>
     <p>
