cambios al index

--- a/index.html
+++ b/index.html
@@ -6,17 +6,21 @@
 	<link rel="stylesheet" type="text/css" href="estilos.css">
 </head>
 <body>
-<header>Bienvenidos a mi página</header>
-<hr>
-<nav>
-<ul>
-	<li><a href="https://www.cdmon.com/es/apps/tabla-colores">Inicio</a></li>
-	<li><a href="https://www.cdmon.com/es/nosotros/somos-verdes">Acerca de mí</a></li>
-	<li><a href="https://www.cdmon.com/es/apps/tabla-colores">Servicios</a></li>
-	<li><a href="https://www.cdmon.com/es/nosotros/contactar">Contactanos</a></li>
-</ul>	
-</nav>
+<header>
+    <nav>
+    <ul>
+        <li><a href="https://www.cdmon.com/es/apps/tabla-colores">Inicio</a></li>
+        <li><a href="https://www.cdmon.com/es/nosotros/somos-verdes">Acerca de mí</a></li>
+        <li><a href="https://www.cdmon.com/es/apps/tabla-colores">Servicios</a></li>
+        <li><a href="https://www.cdmon.com/es/nosotros/contactar">Contactanos</a></li>
+    </ul>	
+    </nav>
+</header>
 <main>
+    <section id="Inicio">Inicio
+        <h1>Bienvenidos a mi página</h1> 
+        <p>Embarquémonos en esta aventura en busca del One Piece</p>
+     </section>
 	<h2>Introduccion</h2>
     <p>Esta es la estrcutura de una pagina web basica, para resolver dudas e inquietudes</p>
     <h2>Seccion de contenido</h2>
