--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <header>
     <nav>
     <ul>
-        <li><a href="https://www.cdmon.com/es/apps/tabla-colores">Inicio</a></li>
-        <li><a href="https://www.cdmon.com/es/nosotros/somos-verdes">Acerca de mí</a></li>
-        <li><a href="https://www.cdmon.com/es/apps/tabla-colores">Servicios</a></li>
-        <li><a href="https://www.cdmon.com/es/nosotros/contactar">Contactanos</a></li>
+        <li><a href="">Inicio</a></li>
+        <li><a href="">Acerca de mí</a></li>
+        <li><a href="">Servicios</a></li>
+        <li><a href="">Contactanos</a></li>
     </ul>	
     </nav>
 </header>
