--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <header>
     <nav>
     <ul>
-        <li><a href="">Inicio</a></li>
-        <li><a href="">Acerca de mí</a></li>
-        <li><a href="">Servicios</a></li>
-        <li><a href="">Contactanos</a></li>
+        <li><a href="#inicio">Inicio</a></li>
+        <li><a href="#Temporadas">Temporadas</a></li>
+        <li><a href="#Descargas">Descargas</a></li>
+        <li><a href="#Contactanos">Contactanos</a></li>
+        <li><a href="#Registrate">Registrate</a></li>
     </ul>	
     </nav>
 </header>
@@ -21,11 +22,22 @@
         <h1>Bienvenidos a mi página</h1> 
         <p>Embarquémonos en esta aventura en busca del One Piece</p>
      </section>
-	<h2>Introduccion</h2>
-    <p>Esta es la estrcutura de una pagina web basica, para resolver dudas e inquietudes</p>
-    <h2>Seccion de contenido</h2>
-    <p>Aqui puedes agregar mas contenido de tu pagina web, para mejorar el contendio</p>
-    <h2>Sección de imagenes</h2>
+     <section id="Temporadas">Inicio
+        <h1>Aqui puedes encontrar todas las temporadas</h1> 
+        <p>Vivamos juntos esta aventura</p>
+     </section>
+     <section id="Descargas">Inicio
+        <h1>En esta seccion, puedes descargar desde nuestros servidores</h1> 
+        <p>Disponible en Mega y Mediafire</p>
+     </section>
+     <section id="Contactanos">Inicio
+        <h1>Puedes contactarnos</h1> 
+        <p>Deja tus datos y te respondemos</p>
+     </section>
+     <section id="Registrate">Inicio
+        <h1>Registrate Aqui, para acceder a contenido exclusivo</h1> 
+        <p>!Unete ya¡</p>
+     </section>
     <img src="image1.webp" alt="luffy One Piece">
 </main>
 <script src="script.js"></script>
