--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
         <h1>Bienvenidos a mi página</h1> 
         <p>Embarquémonos en esta aventura en busca del One Piece</p>
      </section>
-     <section id="Temporadas">Inicio
+     <section id="Temporadas">Temporadas
         <h1>Aqui puedes encontrar todas las temporadas</h1> 
         <p>Vivamos juntos esta aventura</p>
      </section>
-     <section id="Descargas">Inicio
+     <section id="Descargas">Descargas
         <h1>En esta seccion, puedes descargar desde nuestros servidores</h1> 
         <p>Disponible en Mega y Mediafire</p>
      </section>
-     <section id="Contactanos">Inicio
+     <section id="Contactanos">Contactanos
         <h1>Puedes contactarnos</h1> 
         <p>Deja tus datos y te respondemos</p>
      </section>
-     <section id="Registrate">Inicio
+     <section id="Registrate">Registrate
         <h1>Registrate Aqui, para acceder a contenido exclusivo</h1> 
         <p>!Unete ya¡</p>
      </section>
