--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
     </nav>
 </header>
 <main>
-    <section id="Inicio">Inicio
+    <section id="Inicio">
         <h1>Bienvenidos a mi página</h1> 
         <p>Embarquémonos en esta aventura en busca del One Piece</p>
      </section>
-     <section id="Temporadas">Temporadas
+     <section id="Temporadas">
         <h1>Aqui puedes encontrar todas las temporadas</h1> 
         <p>Vivamos juntos esta aventura</p>
      </section>
-     <section id="Descargas">Descargas
+     <section id="Descargas">
         <h1>En esta seccion, puedes descargar desde nuestros servidores</h1> 
         <p>Disponible en Mega y Mediafire</p>
      </section>
-     <section id="Contactanos">Contactanos
+     <section id="Contactanos">
         <h1>Puedes contactarnos</h1> 
         <p>Deja tus datos y te respondemos</p>
      </section>
-     <section id="Registrate">Registrate
+     <section id="Registrate">
         <h1>Registrate Aqui, para acceder a contenido exclusivo</h1> 
         <p>!Unete ya¡</p>
      </section>
