--- a/index.html
+++ b/index.html
@@ -23,19 +23,23 @@
         <p>Embarquémonos en esta aventura en busca del One Piece</p>
      </section>
      <section id="Temporadas">
-        <h1>Aqui puedes encontrar todas las temporadas</h1> 
+        <h1>Temporadas</h1>
+        <h2>Aqui puedes encontrar todas las temporadas</h2> 
         <p>Vivamos juntos esta aventura</p>
      </section>
      <section id="Descargas">
-        <h1>En esta seccion, puedes descargar desde nuestros servidores</h1> 
+        <h1>Descargas</h1>
+        <h2>En esta seccion, puedes descargar desde nuestros servidores</h2> 
         <p>Disponible en Mega y Mediafire</p>
      </section>
      <section id="Contactanos">
-        <h1>Puedes contactarnos</h1> 
+        <h1>Contactanos</h1>
+        <h2>Puedes contactarnos</h2> 
         <p>Deja tus datos y te respondemos</p>
      </section>
      <section id="Registrate">
-        <h1>Registrate Aqui, para acceder a contenido exclusivo</h1> 
+        <h1>Registrate</h1>
+        <h2>Registrate Aqui, para acceder a contenido exclusivo</h2> 
         <p>!Unete ya¡</p>
      </section>
     <img src="image1.webp" alt="luffy One Piece">
