--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 </header>
 <main>
     <section id="Inicio">
-        <h1>Bienvenidos a mi página</h1> 
+        <h1>Inicio</h1>
+        <h2>Bienvenidos a mi página</h2> 
         <p>Embarquémonos en esta aventura en busca del One Piece</p>
      </section>
      <section id="Temporadas">
