--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
      <section id="Registrate">
         <h1>Registrate</h1>
         <h2>Registrate Aqui, para acceder a contenido exclusivo</h2> 
-        <p>!Unete ya¡</p>
+        <p>¡Unete ya!</p>
      </section>
     <img src="image1.webp" alt="luffy One Piece">
 </main>
