--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <header>
     <nav>
     <ul>
-        <li><a href="#inicio">Inicio</a></li>
+        <li><a href="#Inicio">Inicio</a></li>
         <li><a href="#Temporadas">Temporadas</a></li>
         <li><a href="#Descargas">Descargas</a></li>
         <li><a href="#Contactanos">Contactanos</a></li>
