--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header>
-    <nav>
+    <nav id="nav-list">
     <ul>
         <li><a href="#Inicio">Inicio</a></li>
         <li><a href="#Temporadas">Temporadas</a></li>
@@ -16,6 +16,7 @@
         <li><a href="#Registrate">Registrate</a></li>
     </ul>	
     </nav>
+    <button id="nav-toggle" aria-label="toggle-navigation">°</button>
 </header>
 <main>
     <section id="Inicio">
