--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="#Registrate">Registrate</a></li>
     </ul>	
     </nav>
-    <button id="nav-toggle" aria-label="toggle-navigation">°</button>
+    <button id="nav-toggle" aria-label="Toggle navigation">°</button>
 </header>
 <main>
     <section id="Inicio">
